--- a/Atividade_3/package.json
+++ b/Atividade_3/package.json
@@ -4,7 +4,7 @@
   "description": "Projeto tópicos 1",
   "main": "index.js",
   "scripts": {
-    "start": "tsc && node ./index.js",
+    "start": "tsc && node ./src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Victor Alves",
